# agent-skills

./: .gitignore  AGENTS.md  NOTICE  README.ja.md  README.ko.md  README.md  README.zh.md
.agents/: hooks.json
.claude/: settings.json
.claude/skills/worktree-review-gate/: README.md  SKILL.md
.codex/: hooks.json
skills/claude-code-steering/: README.md  SKILL.md
skills/claude-code-steering/references/: audit-playbook.md  mechanisms.md
skills/loop-engineering/: README.md  SKILL.md
skills/loop-engineering/assets/: loop-report.md.template
skills/multi-llm-debate/: README.md  SKILL.md  config.example  env.example
skills/multi-llm-debate/scripts/: .env.example  config.yaml.example  main.py  pyproject.toml  run.cmd  run.ps1  run.sh
skills/multi-llm-debate/scripts/workflow/: __init__.py  config.py  engine.py  moderator.py  opponent.py  proponent.py  providers.py  raw.py  settings.py  types.py  workflow.py
skills/multi-llm-recursive-meta-cognition/: README.md  SKILL.md  config.example  env.example
skills/multi-llm-recursive-meta-cognition/scripts/: .env.example  config.yaml.example  main.py  pyproject.toml  run.cmd  run.ps1  run.sh
skills/multi-llm-recursive-meta-cognition/scripts/workflow/: __init__.py  config.py  decomposer.py  integrator.py  providers.py  raw.py  reflector.py  settings.py  solver.py  types.py  verifier.py  workflow.py
skills/multi-llm-reflection/: README.md  SKILL.md  config.example  env.example
skills/multi-llm-reflection/scripts/: .env.example  config.yaml.example  main.py  pyproject.toml  requirements.txt  run.cmd  run.ps1  run.sh
skills/multi-llm-reflection/scripts/workflow/: __init__.py  config.py  critic.py  engine.py  generator.py  providers.py  raw.py  refiner.py  settings.py  types.py  workflow.py
skills/publish-skill/: README.md  SKILL.md
skills/reflect/: README.md  SKILL.md
(+32 files in other folders)
