[project]
name = "multi-llm-recursive-meta-cognition"
version = "0.1.0"
description = "Multi-LLM recursive meta-cognition workflow (decompose/solve/verify/integrate/reflect) over subscription-auth CLIs (claude / codex / agy)."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

# This project is an application (main.py + workflow/), not a distributable package.
# With package=false, uv manages only the dependencies and does not try to build/install the project itself.
[tool.uv]
package = false
